# TgrCrypto

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test_tgcrypto.py
.github/: dependabot.yml
.github/workflows/: ci.yml  pypi.yml  release.yml  rust.yml
tests/: test_python_api.py
tgrcrypto-core/: Cargo.toml
tgrcrypto-core/benches/: benchmark.rs
tgrcrypto-core/src/: aes256.rs  cbc256.rs  ctr256.rs  ige256.rs  lib.rs
tgrcrypto-python/: Cargo.toml
tgrcrypto-python/src/: lib.rs
