[package]
name = "tgrcrypto-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "High-performance Telegram cryptography library in Rust"

[features]
default = ["aesni"]
## Enable AES-NI hardware acceleration on x86/x86_64 (runtime detected).
aesni = []
## Reserved for future ARM NEON acceleration (not yet implemented).
neon = []

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
rayon = "1.12.0"
