[package]
name = "tgrcrypto-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for TgrCrypto — high-performance Telegram cryptography"
rust-version = "1.70"

[lib]
name = "tgrcrypto"
crate-type = ["cdylib"]

[dependencies]
tgrcrypto-core = { path = "../tgrcrypto-core" }
pyo3 = { version = "0.28.3", features = ["extension-module", "generate-import-lib"] }
